css/modal.css
.modal {
    background-color: honeydew;
    border: 1px solid #888;
    box-shadow: 2px 2px 1px #666;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    left:0;
    position: fixed;
    top: 0;
    width: 100%;
}

@media screen and (min-width: 561px) {
    .modal {
        background-color: honeydew;
        border: 1px solid #888;
        box-shadow: 2px 2px 1px #666;
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        left:25%;
        top: 25%;
        max-height: 100%;
        min-height: 50%;
        position: fixed;
        width: 50%;
    }
}

.modal--closed {
    display: none;
}

.modal__closeButton {
    background-color: honeydew;
    border: none;
    font-size: 2rem;
    flex:100%;
    height: 2rem;
    padding-left: 85%;
    padding-top: 1rem;
}

.modal__header{
    flex:100%;
    line-height: 2rem;
    margin: 0 4rem;
}

.modal__main{  
    padding: 0 4rem;
    flex:100%;
}

.modal__footer {
    display: flex;
    margin-bottom: 2rem;
    margin-right: 4rem;
}

.modal__footer div {
    box-sizing: border-box;
    flex: 80%;
}

.footer__yesButton{
    background-color: #00BB00;
    color: #fff;
    flex: 10%;
    font-size: 2rem;
    margin-right: 0.5rem;
}

.footer__noButton{
    background-color: #EE0000;
    color: #fff;
    flex: 10%;
    font-size: 2rem;
}

